<resources>
    <string name="app_name">EDL</string>
    <string name="app_title">EDL</string>
    <string name="bien_label">Bien</string>
    <string name="owner_label">Propriétaire</string>
    <string name="tenant_label">Locataire</string>
    <string name="mandataire_label">Mandataire</string>
    <string name="user_label">Utilisateur</string>
    <string name="agence_label">Agence</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Nom Prénom</string>
    <string name="adress_label">Adresse</string>
    <string name="address_label_2">Adresse 2</string>
    <string name="postal_code_label">Code postal</string>
    <string name="mandatory">Obligatoire</string>
    <string name="optional">Facultatif</string>
    <string name="city_2">Ville 2</string>
    <string name="phone_label">Téléphone</string>
    <string name="phone_label2">Téléphone 2</string>
    <string name="email_label">Email</string>
    <string name="note_label">Note</string>
    <string name="cancel_label">Annuler</string>
    <string name="create_label">Créer</string>
    <string name="modifier_label">Modifier</string>
    <string name="contractor_label">Mandataire</string>
    <string name="denomination_label">Dénomination</string>
    <string name="nature_label">Nature</string>
    <string name="type_label">Type</string>
    <string name="nb_level_label">Nombre d\'étage</string>
    <string name="etage_label">Etage</string>
    <string name="appartment_number_label">N° de porte</string>
    <string name="rename_label">Renommer</string>
    <string name="entrant_label">Entrant</string>
    <string name="pre_etat_label">Pré-état</string>
    <string name="sortant_label">Sortant</string>
    <string name="default_1">1</string>
    <string name="default_0">0</string>

    <string-array name="civilites">
        <item>Monsieur</item>
        <item>Madame</item>
        <item>Monsieur/Madame</item>
    </string-array>

    <string name="picker_gallery">Gallerie</string>
    <string name="picker_camera">Camera</string>
    <string name="picker_select">Sélectionne</string>
    <string name="picker_media_permissions_hint">Donner la permission à l\'accès à la gallerie</string>
    <string name="picker_empty_media">Affiche les photos sur 7 jours.\nSi besoin de photo plus anciennes alors cliquer sur "Gallerie"</string>
    <string name="picker_allow">Accorder</string>
    <string name="picker_select_photo">Sélectionne une photo</string>
    <string name="picker_no_camera">No camera app is installed</string>
    <string name="city">Ville</string>
    <string name="next">Suivant</string>
    <string name="rename">Renommer</string>
    <string name="rename_dialog_title">Renommer l\'élément</string>
    <string name="add_element">Voulez-vous ajouter un nouvel élement ? </string>
    <string name="add_key">Voulez-vous ajouter une nouvelle référence de clé ? </string>
    <string name="delete_dialog_title">Suppression de l\'élément</string>
    <string name="show_pdf_title">Génération du PDF</string>
    <string name="delete_dialog_content">Êtes-vous certain de vouloir supprimer cet élément. Cette action est irréversible.</string>
    <string name="show_pdf_content">Êtes-vous certain de vouloir générer un PDF de ce constat ?</string>
    <string name="add_room">Ajouter une pièce</string>
    <string name="done">Valider</string>
    <string name="title_add_rooms">Liste des pièces</string>
    <string name="label_intitule">Intitulé :</string>
    <string name="label_etat">état :</string>
    <string name="label_proprete">Propreté :</string>
    <string name="label_descriptif">Descriptif :</string>
    <string name="label_alterations">Altérations :</string>
    <string name="label_note">Notes :</string>
    <string name="label_nature">Nature :</string>
    <string name="add_label">Ajouter</string>
    <string name="selectionne_label">Sélectionné</string>
    <string name="delete_label">Supprimer</string>
    <string name="add_element_label">Ajouter un élément</string>
    <string name="neuf_label">Neuf</string>
    <string name="bon_label">Bon</string>
    <string name="usage_label">D\'usage</string>
    <string name="mauvais_label">Mauvais</string>
    <string name="hs_label">H.S</string>
    <string name="label_procuration">Représenté par</string>
    <string name="label_empty_detail">Veuillez sélectionner un lot technique, une pièce et un élément</string>
    <string name="compteur_eau_froide_label">Compteur d\'eau froide</string>
    <string name="compteur_eau_chaude_label">Compteur d\'eau chaude</string>
    <string name="previous">Précédent</string>
    <string name="en_service_label">En Service</string>
    <string name="coupe_label">Coupé</string>
    <string name="m3">M3</string>
    <string name="localisation">Localisation</string>
    <string name="non_releve_label">Non relevé (motif)</string>
    <string name="hp">HP (kWh)</string>
    <string name="hc">HC (kWh)</string>
    <string name="quantité">Quantité</string>
    <string name="unité">Unité</string>
    <string name="compteur_elec_label">Compteur d\'électricité</string>
    <string name="cuve_fioul_label">Cuve à fuel / Gaz</string>
    <string name="compteur_gaz">Compteur gaz</string>
    <string name="detecteur_fumee_label">Détecteur de fumée</string>
    <string name="equipe_label">Equipé</string>
    <string name="non_equipe_label">Non équipé</string>
    <string name="asterix">*</string>
    <string name="facultatif_label">Facultatif</string>
    <string name="ajout_photo">ajout photo</string>
    <string name="effacer_label">Effacer</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="export_pdf_label">Exporter le constat sous le format PDF</string>
    <string name="permission_camera">Cette application nécessite votre permission pour avoir accès à la caméra et aux accès fichiers.</string>
    <string name="raz">RAZ</string>
    <string name="raz_title">Réinitilisation du détail</string>
    <string name="raz_message">Êtes-vous certain de vouloir réinitiliaser le détail. Il sera impossible de récupérer les valeurs réinitialisées.</string>
    <string name="propre_label">propre</string>
    <string name="poussiere_label">poussière</string>
    <string name="gras_label">gras</string>
    <string name="non_nettoye_label">non nettoyé</string>
    <string name="ajout">ajout</string>
    <string name="eqpts_configuration">Configuration des équipements</string>
    <string name="search_label">Recherche</string>
    <string name="contentdes_page_generation_pdf">Page de génération du PDF</string>
    <string name="label_pdf_title">Constat d\'état des lieux</string>
    <string name="cles_label">Consigner les clés</string>
    <string name="explication_keys_config">Sélectionnez les clés que vous voulez voir s\'afficher lors de l\'établissement d\'un constat</string>
    <string name="explication_eqpts_config">Sélectionnez les équipements que vous voulez voir s\'afficher lors de l\'établissement d\'un constat</string>
    <string name="title_config_keys">Configuration des clés</string>
    <string name="title_room_config">Configuration des pièces</string>
    <string name="toggle_user">Activer l\'utilisateur</string>
    <string name="manage_users">Configurer les utilisateurs</string>
    <string name="manage_agency">Configurer les agences</string>
    <string name="manage_rooms">Configuration des pièces</string>
    <string name="manage_keys">Configuration des clés</string>
    <string name="signature_label">Veuillez tracer votre signature dans le champ ci-dessous</string>
    <string name="parah_label">Veuillez parapher le champ ci-dessous</string>
    <string name="manage_outdoor_eqts">Configurer les équipements ext.</string>
    <string name="fnctmnt_label">Fonctionnement</string>
    <string name="fnctmnt_label_ok">Fonctionnement : OK</string>
    <string name="fnctmnt_label_ko">Fonctionnement : KO</string>
    <plurals name="picker_selected_count">
        <item quantity="one">%d photo selected</item>
        <item quantity="other">%d photos selected</item>
    </plurals>
    <plurals name="picker_max_selection_reached">
        <item quantity="one">You can pick only %d image</item>
        <item quantity="other">You can pick only %d images</item>
    </plurals>
    <string name="add_photos_label">Ajouter des photos</string>
    <string name="imv_photo_content_desc">photo detail constat</string>
    <string name="edit_element_title">Editer un élément</string>
    <string name="edit_input_element_hint">Nom de l\'élément</string>
    <string name="export_data">Exporter les données</string>
</resources>