<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Titre du Dialogue -->
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_element_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <!-- Spinner pour sélectionner un objet -->
    <Spinner
        android:id="@+id/objectSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"/>

    <!-- Champ de saisie texte -->
    <EditText
        android:id="@+id/inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_input_element_hint"
        android:layout_marginTop="@dimen/margin_medium"/>

    <!-- Boutons Valider et Annuler -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="@dimen/margin_medium">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_label"
            android:layout_marginHorizontal="@dimen/margin_small"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/chip_hs"
            android:layout_height="wrap_content"
            android:text="@string/delete_label"
            android:layout_marginHorizontal="@dimen/margin_small"/>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_marginHorizontal="@dimen/margin_small"/>
    </LinearLayout>
</LinearLayout>
