<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_bg"
    tools:context=".ui.MainFragment">


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rcv_constat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_entrant"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginBottom="20dp"
            app:cornerRadius="30dp"
            android:theme="@style/Theme.MaterialComponents"
            android:textColor="@color/white"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp"
            android:text="@string/entrant_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_pre_etat"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginBottom="20dp"
            app:cornerRadius="30dp"
            android:theme="@style/Theme.MaterialComponents"
            android:textColor="@color/white"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp"
            android:text="@string/pre_etat_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sortant"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginBottom="20dp"
            app:cornerRadius="30dp"
            android:theme="@style/Theme.MaterialComponents"
            android:textColor="@color/white"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp"
            android:text="@string/sortant_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_photo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginBottom="20dp"
            app:cornerRadius="30dp"
            android:theme="@style/Theme.MaterialComponents"
            android:textColor="@color/white"
            android:visibility="gone"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp"
            android:text="Photo" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_constat"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        tools:listitem="@layout/constat_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>